Add New Model & Controller
